fix(i18n): add missing translations [CDS 2106]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pl_PL.json
@@ -8,7 +8,7 @@
   "hosting_dashboard_loading_error": "Wystąpił błąd podczas pobierania informacji. Sytuacja taka może wystąpić, jeśli włączona jest blokada reklam.",
   "hosting_dashboard_creation_date": "Data utworzenia",
   "hosting_dashboard_expiration_date": "Data wygaśnięcia",
-  "hosting_dashboard_databases": "Bazy danych SQL",
+  "hosting_dashboard_databases": "Bazy danych",
   "hosting_dashboard_one_click_modules": "Moduły CMS",
   "hosting_dashboard_service_state": "Stan usługi",
   "hosting_dashboard_service_state_ACTIVE": "Aktywny",
@@ -150,13 +150,13 @@
   "hosting_dashboard_service_cdn_customer_has_cdn_v1_banner_msg_link_upgrade": "Migracja CDN",
   "hosting_dashboard_service_cdn_customer_has_cdn_v1_new_offers": "OVHcloud poleca nowe oferty CDN",
   "hosting_dashboard_service_web": "Strony WWW",
-  "hosting_dashboard_service_privatesql": "Prywatna baza danych",
+  "hosting_dashboard_service_privatesql": "Web Cloud Databases",
   "hosting_dashboard_service_privatesql_more": "Wyświetl listę",
   "hosting_dashboard_service_privatesql_order": "Zamów",
-  "hosting_dashboard_service_privatesql_order_title": "Zamów prywatną bazę danych",
+  "hosting_dashboard_service_privatesql_order_title": "Zamów bazę danych Web Cloud Databases",
   "hosting_dashboard_service_privatesql_active": "Włącz",
-  "hosting_dashboard_service_privatesql_active_long": "Włączenie prywatnej bazy SQL",
-  "hosting_dashboard_service_privatesql_active_remaining": "Liczba niewłączonych prywatnych baz danych SQL: {{ count }}",
+  "hosting_dashboard_service_privatesql_active_long": "Aktywacja bazy danych Web Cloud Databases",
+  "hosting_dashboard_service_privatesql_active_remaining": "Liczba nieaktywnych baz danych Web Cloud Databases: {{count}}",
   "hosting_dashboard_service_privatesql_active_doing": "Trwa aktywacja...",
   "hosting_dashbaord_service_privatesql_detach": "Odłącz",
   "hosting_dashboard_service_web_info_1": "na 1 zalecaną",
@@ -1069,8 +1069,8 @@
   "hosting_order_upgrade_start_time_summary_tomorrow": "Aktualizacja przewidziana jutro o {{time}}.",
   "hosting_migrate_my_ovh_org_success": "Migracja Twojej domeny ovh.org została zarejestrowana. Po zakończeniu operacji otrzymasz e-mail.",
   "hosting_migrate_my_ovh_org_error": "Wystąpił błąd podczas migracji Twojego konta ovh.org.",
-  "hosting_tab_DATABASES_configuration_order_title_button_public": "Zamów bazę Start SQL",
-  "hosting_tab_DATABASES_configuration_order_title_button_private": "Zamów prywatną bazę SQL",
+  "hosting_tab_DATABASES_configuration_order_title_button_public": "Zamów bazę danych",
+  "hosting_tab_DATABASES_configuration_order_title_button_private": "Zamów bazę danych Web Cloud Databases",
   "hosting_tab_DATABASES_configuration_order_title": "Zamów bazę danych",
   "hosting_tab_DATABASES_configuration_order_title_private": "Zamów prywatną bazę SQL",
   "hosting_ipv4_coming_soon": "Opcja aktualnie niedostępna.",
