--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pt_PT.json
@@ -8,7 +8,7 @@
   "hosting_dashboard_loading_error": "Erro ao carregar a informação. Isto pode ocorrer quando tiver ativado um bloqueador de publicidade.",
   "hosting_dashboard_creation_date": "Data de criação",
   "hosting_dashboard_expiration_date": "Expira a",
-  "hosting_dashboard_databases": "Bases de dados SQL",
+  "hosting_dashboard_databases": "Bases de dados",
   "hosting_dashboard_one_click_modules": "Módulos \"1 clique\"",
   "hosting_dashboard_service_state": "Estado do serviço",
   "hosting_dashboard_service_state_ACTIVE": "Ativo",
@@ -150,13 +150,13 @@
   "hosting_dashboard_service_cdn_customer_has_cdn_v1_banner_msg_link_upgrade": "Migrar a sua CDN",
   "hosting_dashboard_service_cdn_customer_has_cdn_v1_new_offers": "A OVHcloud recomenda-lhe as novas ofertas CDN",
   "hosting_dashboard_service_web": "Sites",
-  "hosting_dashboard_service_privatesql": "Base de dados privada",
+  "hosting_dashboard_service_privatesql": "Web Cloud Databases",
   "hosting_dashboard_service_privatesql_more": "Ver lista",
   "hosting_dashboard_service_privatesql_order": "Encomendar",
-  "hosting_dashboard_service_privatesql_order_title": "Encomendar uma base de dados privada",
+  "hosting_dashboard_service_privatesql_order_title": "Encomendar uma base de dados Web Cloud Databases",
   "hosting_dashboard_service_privatesql_active": "Ativar",
-  "hosting_dashboard_service_privatesql_active_long": "Ativar uma base SQL privada",
-  "hosting_dashboard_service_privatesql_active_remaining": "{{ count }} base(s) de dados SQL privada(s) não ativada(s)",
+  "hosting_dashboard_service_privatesql_active_long": "Ativar uma base de dados Web Cloud Databases",
+  "hosting_dashboard_service_privatesql_active_remaining": "{{ count }} base(s) de dados Web Cloud Databases não ativada(s)",
   "hosting_dashboard_service_privatesql_active_doing": "Ativação em curso",
   "hosting_dashbaord_service_privatesql_detach": "Desassociar",
   "hosting_dashboard_service_web_info_1": "de 1 recomendado",
@@ -1069,8 +1069,8 @@
   "hosting_order_upgrade_start_time_summary_tomorrow": "Atualização prevista para amanhã, às {{time}}.",
   "hosting_migrate_my_ovh_org_success": "A migração do seu domínio ovh.org foi registada com êxito. Receberá um e-mail assim que a operação estiver concluída.",
   "hosting_migrate_my_ovh_org_error": "Ocorreu um erro aquando da migração do seu domínio ovh.org.",
-  "hosting_tab_DATABASES_configuration_order_title_button_public": "Encomendar uma base de dados Start SQL",
-  "hosting_tab_DATABASES_configuration_order_title_button_private": "Encomendar uma base de dados SQL privada",
+  "hosting_tab_DATABASES_configuration_order_title_button_public": "Encomendar uma base de dados",
+  "hosting_tab_DATABASES_configuration_order_title_button_private": "Encomendar uma base de dados Web Cloud Databases",
   "hosting_tab_DATABASES_configuration_order_title": "Encomendar uma base de dados",
   "hosting_tab_DATABASES_configuration_order_title_private": "Encomendar uma base de dados SQL privada",
   "hosting_ipv4_coming_soon": "Atualmente indisponível.",
