--- a/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_de_DE.json
@@ -396,7 +396,7 @@
   "privateDatabase_metrics_time_range_WEEK": "Letzte Woche",
   "privateDatabase_metrics_time_range_MONTH": "Letzter Monat",
   "privateDatabase_order_sql_type_start_label": "SQL Basic ",
-  "privateDatabase_order_sql_type_dbaas_label": "CloudDB",
+  "privateDatabase_order_sql_type_dbaas_label": "Web Cloud Databases",
   "privateDatabase_tabs_whitelist_webhosting_network_access_title": "Zugang zu den OVHcloud Webhostings",
   "private_database_tabs_whitelist_webhosting_network_access_description": "Den OVHcloud Webhostings den Zugriff auf die Datenbank erlauben",
   "private_database_tabs_whitelist_webhosting_network_access_success": "Die Berechtigung der OVHcloud Webhostings, auf die Datenbank zuzugreifen, wurde geändert.",
@@ -464,7 +464,7 @@
   "privateDatabase_modale_oom_tab_size_reached": "Erreichte Kapazität",
   "privateDatabase_modale_oom_tab_uptime": "Zeit seit der letzten Überschreitung",
   "privateDatabase_modale_oom_no_oom": "Keine Überschreitung der RAM-Kapazität.",
-  "privateDatabase_modale_oom_info_order": "Wir empfehlen Ihnen, die RAM-Kapazität Ihrer CloudDB zu erhöhen, um diese Probleme zu beheben.",
+  "privateDatabase_modale_oom_info_order": "Um diese Probleme zu beheben, empfehlen wir mehr RAM für Ihre Datenbank mit Web Cloud Databases.",
   "privateDatabase_tabs_list_extensions_title": "Erweiterungen",
   "privateDatabase_tabs_list_extensions_extension": "Erweiterung",
   "privateDatabase_tabs_list_extensions_description": "Beschreibung",
@@ -494,7 +494,7 @@
   "privateDatabase_modale_cpu_throttle_tab_duration": "Dauer der Auslastung",
   "privateDatabase_modale_cpu_throttle_ongoing_cpu_throttle": "Aktuelle CPU-Auslastung",
   "privateDatabase_modale_cpu_throttle_no_cpu_throttle": "Keine CPU-Auslastung.",
-  "privateDatabase_modale_cpu_throttle_info_order": "Es wird empfohlen, Ihre Anfragen und Indizes zu verbessern, oder aber Ihre Datenbanken auf eine größere Anzahl von CloudDB-Instanzen zu verteilen.",
+  "privateDatabase_modale_cpu_throttle_info_order": "Zur Behebung dieser Probleme wird empfohlen, Ihre Abfragen und Indizes zu verbessern oder Ihre Datenbanken auf weitere Web Cloud Databases-Instanzen zu verteilen.",
   "privateDatabase_dashboard_datacenter_gra": "Gravelines",
   "privateDatabase_dashboard_datacenter_gra3": "Gravelines 3",
   "privateDatabase_dashboard_datacenter_bhs": "Beauharnois",
