--- a/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_es_ES.json
@@ -396,7 +396,7 @@
   "privateDatabase_metrics_time_range_WEEK": "Última semana",
   "privateDatabase_metrics_time_range_MONTH": "Último mes",
   "privateDatabase_order_sql_type_start_label": "Start SQL",
-  "privateDatabase_order_sql_type_dbaas_label": "CloudDB",
+  "privateDatabase_order_sql_type_dbaas_label": "Web Cloud Databases",
   "privateDatabase_tabs_whitelist_webhosting_network_access_title": "Acceso a los alojamientos web de OVHcloud",
   "private_database_tabs_whitelist_webhosting_network_access_description": "Autorizar a los alojamientos web de OVHcloud a acceder a la base de datos",
   "private_database_tabs_whitelist_webhosting_network_access_success": "El cambio de la autorización de acceso de los alojamientos web de OVHcloud a la base de datos se ha registrado correctamente.",
@@ -464,7 +464,7 @@
   "privateDatabase_modale_oom_tab_size_reached": "Tamaño alcanzado",
   "privateDatabase_modale_oom_tab_uptime": "Tiempo transcurrido desde la última vez",
   "privateDatabase_modale_oom_no_oom": "No se ha rebasado la RAM asignada.",
-  "privateDatabase_modale_oom_info_order": "Le recomendamos que aumente la RAM de su CloudDB para solucionar estos problemas.",
+  "privateDatabase_modale_oom_info_order": "Le recomendamos que aumente la RAM de su base de datos Web Cloud Databases para solucionar estos problemas.",
   "privateDatabase_tabs_list_extensions_title": "Extensiones",
   "privateDatabase_tabs_list_extensions_extension": "Extensión",
   "privateDatabase_tabs_list_extensions_description": "Descripción",
@@ -493,7 +493,7 @@
   "privateDatabase_modale_cpu_throttle_tab_duration": "Duración de la saturación",
   "privateDatabase_modale_cpu_throttle_ongoing_cpu_throttle": "Saturación de CPU en curso",
   "privateDatabase_modale_cpu_throttle_no_cpu_throttle": "Sin saturación de CPU",
-  "privateDatabase_modale_cpu_throttle_info_order": "Le recomendamos que mejore sus consultas e índices o que reparta sus bases de datos en más instancias CloudDB para solucionar estos problemas.",
+  "privateDatabase_modale_cpu_throttle_info_order": "Le recomendamos que mejore sus consultas e índices o que reparta sus bases de datos en más instancias de Web Cloud Databases para solucionar estos problemas.",
   "privateDatabase_configuration_documentation": "Más información sobre estas opciones",
   "privateDatabase_dashboard_datacenter_gra": "Gravelines",
   "privateDatabase_dashboard_datacenter_gra3": "Gravelines 3",
