--- a/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_it_IT.json
@@ -396,7 +396,7 @@
   "privateDatabase_metrics_time_range_WEEK": "Ultima settimana",
   "privateDatabase_metrics_time_range_MONTH": "Ultimo mese",
   "privateDatabase_order_sql_type_start_label": "Start SQL",
-  "privateDatabase_order_sql_type_dbaas_label": "CloudDB",
+  "privateDatabase_order_sql_type_dbaas_label": "Web Cloud Databases",
   "privateDatabase_tabs_whitelist_webhosting_network_access_title": "Accesso agli hosting Web OVHcloud",
   "private_database_tabs_whitelist_webhosting_network_access_description": "Autorizza gli hosting Web OVHcloud ad accedere al database",
   "private_database_tabs_whitelist_webhosting_network_access_success": "La modifica delle autorizzazioni di accesso al database da parte degli hosting Web OVHcloud è stata presa in carico.",
@@ -464,7 +464,7 @@
   "privateDatabase_modale_oom_tab_size_reached": "Capacità raggiunta",
   "privateDatabase_modale_oom_tab_uptime": "Tempo trascorso dall'ultimo superamento della capacità della RAM. ",
   "privateDatabase_modale_oom_no_oom": "Nessun superamento della capacità della RAM.",
-  "privateDatabase_modale_oom_info_order": "Per risolvere questi problemi, ti consigliamo di aumentare la RAM del tuo CloudDB.",
+  "privateDatabase_modale_oom_info_order": "Per risolvere questi problemi, consigliamo di aumentare la RAM del database Web Cloud Databases.",
   "privateDatabase_tabs_list_extensions_title": "Estensioni",
   "privateDatabase_tabs_list_extensions_extension": "Estensione",
   "privateDatabase_tabs_list_extensions_description": "Descrizione",
@@ -493,7 +493,7 @@
   "privateDatabase_modale_cpu_throttle_tab_duration": "Durata della saturazione",
   "privateDatabase_modale_cpu_throttle_ongoing_cpu_throttle": "Saturazione CPU in corso...",
   "privateDatabase_modale_cpu_throttle_no_cpu_throttle": "Nessuna saturazione CPU",
-  "privateDatabase_modale_cpu_throttle_info_order": "Per risolvere questi problemi, consigliamo di ottimizzare query e indici o ripartire i database su più istanze CloudDB.",
+  "privateDatabase_modale_cpu_throttle_info_order": "Per risolvere questi problemi, consigliamo di ottimizzare query e indici o ripartire i database su più istanze Web Cloud Databases.",
   "privateDatabase_configuration_documentation": "Maggiori informazioni su queste opzioni",
   "privateDatabase_dashboard_datacenter_gra": "Gravelines",
   "privateDatabase_dashboard_datacenter_gra3": "Gravelines 3",
