--- a/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_pt_PT.json
@@ -396,7 +396,7 @@
   "privateDatabase_metrics_time_range_WEEK": "Última semana",
   "privateDatabase_metrics_time_range_MONTH": "Último mês",
   "privateDatabase_order_sql_type_start_label": "Start SQL",
-  "privateDatabase_order_sql_type_dbaas_label": "CloudDB",
+  "privateDatabase_order_sql_type_dbaas_label": "Web Cloud Databases",
   "privateDatabase_tabs_whitelist_webhosting_network_access_title": "Acesso aos alojamentos web da OVHcloud",
   "private_database_tabs_whitelist_webhosting_network_access_description": "Autorizar o acesso dos alojamentos web da OVHcloud à base de dados",
   "private_database_tabs_whitelist_webhosting_network_access_success": "A alteração da autorização de acesso dos alojamentos web da OVHcloud à base de dados foi corretamente tomada em conta.",
@@ -464,7 +464,7 @@
   "privateDatabase_modale_oom_tab_size_reached": "Capacidade alcançada",
   "privateDatabase_modale_oom_tab_uptime": "Tempo decorrido desde o último evento «capacidade RAM excedida» ",
   "privateDatabase_modale_oom_no_oom": "Nenhum registo de capacidade de RAM excedida.",
-  "privateDatabase_modale_oom_info_order": "Para resolver a limitação, sugerimos o aumento da RAM do seu CloudDB ",
+  "privateDatabase_modale_oom_info_order": "Sugerimos que aumente a RAM da sua base de dados Web Cloud Databases para resolver estes problemas.",
   "privateDatabase_tabs_list_extensions_title": "Extensões",
   "privateDatabase_tabs_list_extensions_extension": "Extensão",
   "privateDatabase_tabs_list_extensions_description": "Descrição ",
@@ -493,7 +493,7 @@
   "privateDatabase_modale_cpu_throttle_tab_duration": "Duração da saturação",
   "privateDatabase_modale_cpu_throttle_ongoing_cpu_throttle": "Saturação CPU em curso",
   "privateDatabase_modale_cpu_throttle_no_cpu_throttle": "Sem saturação CPU.",
-  "privateDatabase_modale_cpu_throttle_info_order": "Aconselhamos que melhore os seus pedidos e índices, ou que reparta as suas bases de dados por mais instâncias CloudDB para resolver estes problemas.",
+  "privateDatabase_modale_cpu_throttle_info_order": "Aconselhamos que melhore os seus pedidos e índices ou que reparta as suas bases de dados por mais instâncias Web Cloud Databases para resolver estes problemas.",
   "privateDatabase_configuration_documentation": "Saber mais sobre estas opções",
   "privateDatabase_dashboard_datacenter_gra": "Gravelines",
   "privateDatabase_dashboard_datacenter_gra3": "Gravelines 3",
