--- a/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_pt_PT.json
@@ -1,6 +1,6 @@
 {
-  "private_database_order_clouddb_title": "Solicitar um banco de dados de banco de dados em nuvem",
-  "private_database_order_clouddb_subtitle": "A oferta de Bases de Dados em Nuvem requer um serviço com acesso à rede pública de Internet.",
+  "private_database_order_clouddb_title": "Encomendar uma base de dados Web Cloud Databases",
+  "private_database_order_clouddb_subtitle": "A oferta Web Cloud Databases requer um serviço com acesso à rede pública.",
   "private_database_order_clouddb_customization": "Personalização",
   "private_database_order_clouddb_server_version": "Versão do servidor",
   "private_database_order_clouddb_server_version_placeholder": "Selecione a versão do servidor",
@@ -24,6 +24,8 @@
   "private_database_order_clouddb_payment_get_checkout_error": "Ocorreu um erro aquando da recuperação das informações do seu carrinho.",
   "private_database_order_clouddb_payment_get_payment_method_error": "Ocorreu um erro durante a recuperação dos métodos de pagamento.",
   "private_database_order_clouddb_payment_checkout_error": "Ocorreu um erro durante o pagamento do montante do carrinho.",
-  "private_database_order_clouddb_payment_checkout_success": "Seu comando para o banco de dados de Bancos de Dados em Nuvem foi levado em conta. Sua conta {{accountId}} foi debitada com êxito de {{price}}. <a class=\"d-block\" target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">Exibir minha fatura</a>",
-  "private_database_order_clouddb_bill_success": "A sua <a target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">nota de encomenda</a> foi gerada com êxito. O banco de dados de Bancos de Dados em Nuvem estará ativo após o pagamento."
+  "private_database_order_clouddb_payment_checkout_success": "O pedido para a sua base de dados Web Cloud Databases foi processado. Foi efetuado um débito de {{price}} na sua conta {{accountId}}.",
+  "private_database_order_clouddb_bill_success": "O seu {{link}} foi gerado com sucesso. A sua base de dados Web Cloud Databases será ativada após o pagamento.",
+  "private_database_order_clouddb_payment_checkout_success_link": "Ver a minha fatura",
+  "private_database_order_clouddb_bill_success_link": "Nota de encomenda"
 }
