--- a/packages/manager/apps/web/client/app/private-database/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/private-database/translations/Messages_de_DE.json
@@ -1,4 +1,4 @@
 {
-  "private_databases_title": "Datenbanken",
+  "private_databases_title": "Web Cloud Databases",
   "private_databases_order": "Bestellen"
 }
