--- a/packages/manager/apps/web/client/app/private-database/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/private-database/translations/Messages_es_ES.json
@@ -1,4 +1,4 @@
 {
-  "private_databases_title": "Bases de datos",
+  "private_databases_title": "Web Cloud Databases",
   "private_databases_order": "Contratar"
 }
