--- a/packages/manager/modules/vps/src/vps/translations/Messages_en_GB.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_en_GB.json
@@ -394,10 +394,10 @@
   "vps_additional_disk_add_button_soon": "You will soon be able to add multiple additional disks to your VPS.",
   "vps_tab_additional_disk_guide": "How to use an additional disk",
   "vps_additional_disk_info_fail": "An error occurred when loading information on additional disks ",
-  "vps_tab_cloud_database": "Database ",
+  "vps_tab_cloud_database": "Databases",
   "vps_tab_cloud_database_description": "Need reliable, high-performance databases that are fully-managed by OVHcloud?<br/>Order our Cloud Databases service.<br/>You will have a standalone database that is compatible with all of your OVHcloud products.<br/>MariaDB, MongoDB, MySQL, PostgreSQL and Redis available",
   "vps_tab_cloud_database_explanation": "All your databases are listed below.<br/>For each database, you can authorise or delete your VPS IP,<br/>and order new databases.",
-  "vps_tab_cloud_database_header_name": "CloudDB instance",
+  "vps_tab_cloud_database_header_name": "Web Cloud Databases instance",
   "vps_tab_cloud_database_header_version": "Version",
   "vps_tab_cloud_database_header_vps_authorized": "Authorised VPS",
   "vps_tab_cloud_database_header_status": "Status",
@@ -412,8 +412,8 @@
   "vps_tab_cloud_database_whitelist_remove_success": "The VPS has been removed from database access. It can no longer access the database.",
   "vps_tab_cloud_database_whitelist_remove_error": "An error has occurred requesting database access removal.",
   "vps_tab_cloud_database_order": "Order a database",
-  "vps_tab_cloud_database_order_disclaimer": "CloudDB needs a service which has access to the public network/internet. ",
-  "vps_tab_cloud_database_order_explanation_title": "CloudDB characteristics:",
+  "vps_tab_cloud_database_order_disclaimer": "Web Cloud Databases require a service that has access to the public network/internet.",
+  "vps_tab_cloud_database_order_explanation_title": "Web Cloud Databases features:",
   "vps_tab_cloud_database_order_explanation_text": "Only accessible via the public network <br />Unlimited databases <br />512MB - 4GB guaranteed RAM<br />8GB - 54GB guaranteed disk space<br />Automatic daily backups<br />Up to 200 concurrent connections ",
   "vps_tab_cloud_database_order_customize": "Customisation",
   "vps_tab_cloud_database_order_version": "Server version",
