--- a/packages/manager/modules/vps/src/vps/translations/Messages_es_ES.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_es_ES.json
@@ -394,10 +394,10 @@
   "vps_additional_disk_add_button_soon": "Dentro de poco podrá añadir múltiples discos adicionales a su VPS.",
   "vps_tab_additional_disk_guide": "Cómo utilizar un disco adicional",
   "vps_additional_disk_info_fail": "Se ha producido un error al cargar la información de los discos adicionales.",
-  "vps_tab_cloud_database": "Base de datos",
+  "vps_tab_cloud_database": "Bases de datos",
   "vps_tab_cloud_database_description": "¿Necesita bases de datos fiables, potentes y 100 % administradas por OVHcloud?<br/>¡Contrate nuestro servicio Cloud Databases!<br/>Disfrute de una base de datos autónoma y compatible con todos sus productos cloud de OVHcloud.<br/>¡MariaDB, MongoDB, MySQL, PostgreSQL y Redis disponibles!",
   "vps_tab_cloud_database_explanation": "Consulte a continuación todas sus bases de datos.<br/>Con cada base de datos, podrá autorizar o eliminar la IP de su VPS,<br/>y contratar nuevas bases de datos.",
-  "vps_tab_cloud_database_header_name": "Instancia CloudDB",
+  "vps_tab_cloud_database_header_name": "Instancia Web Cloud Databases",
   "vps_tab_cloud_database_header_version": "Versión",
   "vps_tab_cloud_database_header_vps_authorized": "VPS autorizado",
   "vps_tab_cloud_database_header_status": "Estado",
@@ -412,8 +412,8 @@
   "vps_tab_cloud_database_whitelist_remove_success": "El VPS se ha eliminado de la base de datos. Ya no puede acceder a la base de datos.",
   "vps_tab_cloud_database_whitelist_remove_error": "Se ha producido un error al solicitar la supresión del acceso a la base.",
   "vps_tab_cloud_database_order": "Contratar una base de datos",
-  "vps_tab_cloud_database_order_disclaimer": "CloudDB requiere un servicio con acceso a la red pública.",
-  "vps_tab_cloud_database_order_explanation_title": "Características de CloudDB:",
+  "vps_tab_cloud_database_order_disclaimer": "La solución Web Cloud Databases requiere un servicio con acceso a la red pública de internet.",
+  "vps_tab_cloud_database_order_explanation_title": "Características de Web Cloud Databases:",
   "vps_tab_cloud_database_order_explanation_text": "Solo accesible desde la red pública<br />Número de bases ilimitado<br />Memoria RAM garantizada de 512 MB a 4 GB<br />Disco garantizado de 8 GB a 54 GB<br />Copias de seguridad automáticas diarias<br />Hasta 200 conexiones simultáneas",
   "vps_tab_cloud_database_order_customize": "Personalización",
   "vps_tab_cloud_database_order_version": "Versión del servidor",
