--- a/packages/manager/modules/vps/src/vps/translations/Messages_it_IT.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_it_IT.json
@@ -397,7 +397,7 @@
   "vps_tab_cloud_database": "Database",
   "vps_tab_cloud_database_description": "Hai bisogno di database affidabili, performanti e gestiti al 100% da OVHcloud?<br/>Ordina il nostro servizio Cloud Databases!<br/>Avrai a disposizione un database autonomo e compatibile con tutti i prodotti Cloud OVHcloud.<br/>MariaDB, MongoDB, MySQL, PostgreSQL e Redis disponibili!",
   "vps_tab_cloud_database_explanation": "Qui sotto trovi tutti i tuoi database.<br/>Puoi autorizzare l'IP del tuo VPS o eliminarlo per ogni database.<br/>Puoi anche ordinare nuovi database.",
-  "vps_tab_cloud_database_header_name": "Istanza CloudDB",
+  "vps_tab_cloud_database_header_name": "Istanza Web Cloud Databases",
   "vps_tab_cloud_database_header_version": "Versione",
   "vps_tab_cloud_database_header_vps_authorized": "VPS autorizzato",
   "vps_tab_cloud_database_header_status": "Stato",
@@ -412,8 +412,8 @@
   "vps_tab_cloud_database_whitelist_remove_success": "Il VPS è stato rimosso correttamente dagli accessi al database. Non può più accedere al database.",
   "vps_tab_cloud_database_whitelist_remove_error": "Si è verificato un errore durante la richiesta di eliminazione dell'accesso al database.",
   "vps_tab_cloud_database_order": "Ordina un database",
-  "vps_tab_cloud_database_order_disclaimer": "CloudDB richiede un servizio con accesso alla rete Internet pubblica.",
-  "vps_tab_cloud_database_order_explanation_title": "Caratteristiche di CloudDB:",
+  "vps_tab_cloud_database_order_disclaimer": "Il servizio Web Cloud Database richiede un servizio con accesso alla rete Internet pubblica.",
+  "vps_tab_cloud_database_order_explanation_title": "Caratteristiche di Web Cloud Databases:",
   "vps_tab_cloud_database_order_explanation_text": "Accessibile solo dalla rete pubblica<br />Numero illimitato di database <br />Memoria RAM garantita da 512 MB a 4 GB<br />Disco garantito da 8 GB a 54 GB<br />Backup automatici giornalieri<br />Fino a 200 connessioni simultanee",
   "vps_tab_cloud_database_order_customize": "Personalizzazione",
   "vps_tab_cloud_database_order_version": "Versione del server ",
