--- a/packages/manager/modules/vps/src/vps/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_pl_PL.json
@@ -394,10 +394,10 @@
   "vps_additional_disk_add_button_soon": "Wkrótce będziesz mógł dodawać dyski do swojego serwera VPS.",
   "vps_tab_additional_disk_guide": "Jak korzystać z dodatkowego dysku",
   "vps_additional_disk_info_fail": "Wystąpił błąd podczas pobierania informacji na temat dodatkowych dysków.",
-  "vps_tab_cloud_database": "Baza danych",
+  "vps_tab_cloud_database": "Bazy danych",
   "vps_tab_cloud_database_description": "Potrzebujesz niezawodnych, wydajnych i zarządzanych przez OVHcloud baz danych?<br/>Zamów usługę Cloud Databases!<br/>Otrzymasz do dyspozycji niezależną bazę danych kompatybilną ze wszystkimi Twoimi produktami chmurowymi od OVHcloud.<br/>Dostępne są: MariaDB, MongoDB, MySQL, PostgreSQL i Redis!",
   "vps_tab_cloud_database_explanation": "Wszystkie Twoje bazy danych znajdziesz poniżej.<br/>W przypadku każdej bazy danych możesz autoryzować IP Twojego serwera VPS lub je usunąć.<br/>Możesz również zamówić nowe bazy danych.",
-  "vps_tab_cloud_database_header_name": "Instancja CloudDB",
+  "vps_tab_cloud_database_header_name": "Instancja Web Cloud Databases",
   "vps_tab_cloud_database_header_version": "Wersja",
   "vps_tab_cloud_database_header_vps_authorized": "Autoryzowany VPS",
   "vps_tab_cloud_database_header_status": "Status",
@@ -412,8 +412,8 @@
   "vps_tab_cloud_database_whitelist_remove_success": "Dostęp VPS do bazy został usunięty. VPS nie może się już teraz połączyć z bazą danych.",
   "vps_tab_cloud_database_whitelist_remove_error": "Wystąpił błąd podczas żądania usunięcia dostępu do bazy.",
   "vps_tab_cloud_database_order": "Zamów bazę danych",
-  "vps_tab_cloud_database_order_disclaimer": "Oferta CloudDB wymaga usługi z dostępem do publicznej sieci internet.",
-  "vps_tab_cloud_database_order_explanation_title": "Parametry CloudDB:",
+  "vps_tab_cloud_database_order_disclaimer": "Oferta Web Cloud Databases wymaga usługi z dostępem do publicznej sieci internetowej.",
+  "vps_tab_cloud_database_order_explanation_title": "Funkcje Web Cloud Databases:",
   "vps_tab_cloud_database_order_explanation_text": "Dostępna tylko z poziomu sieci publicznej<br />Nieograniczona liczba baz<br />Gwarantowana pamięć RAM od 512 MB do 4 GB<br />Gwarantowany dysk o rozmiarze od 8 GB do 54 GB<br />Codzienne automatyczne kopie zapasowe<br />Do 200 jednoczesnych połączeń",
   "vps_tab_cloud_database_order_customize": "Personalizacja",
   "vps_tab_cloud_database_order_version": "Wersja serwera",
