--- a/packages/manager/modules/vps/src/vps/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_pt_PT.json
@@ -394,10 +394,10 @@
   "vps_additional_disk_add_button_soon": "Poderá adicionar em breve múltiplos discos adicionais ao seu VPS.",
   "vps_tab_additional_disk_guide": "Como utilizar um disco adicional",
   "vps_additional_disk_info_fail": "Ocorreu um erro aquando do carregamento das informações sobre os discos adicionais",
-  "vps_tab_cloud_database": "Base de dados",
+  "vps_tab_cloud_database": "Bases de dados",
   "vps_tab_cloud_database_description": "Necessita de bases de dados fiáveis, com boa performance e 100% administradas pela OVHcloud?<br/>Encomende o nosso serviço Cloud Databases!<br/>Disporá de uma base de dados autónoma e compatível com todos os seus produtos cloud da OVHcloud.<br/>MariaDB, MongoDB, MySQL, PostgreSQL e Redis disponíveis!",
   "vps_tab_cloud_database_explanation": "Encontre aqui todas as suas bases de dados.<br/>Para cada base de dados, pode autorizar ou eliminar o IP do seu VPS,<br/>assim como encomendar novas bases de dados.",
-  "vps_tab_cloud_database_header_name": "Instância CloudDB",
+  "vps_tab_cloud_database_header_name": "Instância Web Cloud Databases",
   "vps_tab_cloud_database_header_version": "Versão",
   "vps_tab_cloud_database_header_vps_authorized": "VPS autorizado",
   "vps_tab_cloud_database_header_status": "Estado",
@@ -412,8 +412,8 @@
   "vps_tab_cloud_database_whitelist_remove_success": "O VPS foi removido dos acessos à base de dados com sucesso. Já não pode aceder à base.",
   "vps_tab_cloud_database_whitelist_remove_error": "Ocorreu um erro ao solicitar a remoção de acesso à base.",
   "vps_tab_cloud_database_order": "Encomendar uma base de dados",
-  "vps_tab_cloud_database_order_disclaimer": "A oferta CloudDB requer um serviço com acesso à rede pública.",
-  "vps_tab_cloud_database_order_explanation_title": "Características do CloudDB:",
+  "vps_tab_cloud_database_order_disclaimer": "A oferta Web Cloud Databases requer um serviço com acesso à rede pública.",
+  "vps_tab_cloud_database_order_explanation_title": "Características do Web Cloud Databases:",
   "vps_tab_cloud_database_order_explanation_text": "Apenas acessível através da rede pública<br />Número ilimitado de bases de dados<br />Memória RAM garantida de 512 MB a 4 GB<br />Disco garantido de 8 GB a 54 GB<br />Backups automáticos diários<br />Até 200 ligações simultâneas",
   "vps_tab_cloud_database_order_customize": "Personalização",
   "vps_tab_cloud_database_order_version": "Versão do servidor",
