--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
@@ -8,7 +8,7 @@
   "hosting_dashboard_loading_error": "An error has occurred loading information. This error may be due to an ad-blocker being enabled.",
   "hosting_dashboard_creation_date": "Creation date",
   "hosting_dashboard_expiration_date": "Expires on ",
-  "hosting_dashboard_databases": "SQL databases",
+  "hosting_dashboard_databases": "Databases",
   "hosting_dashboard_one_click_modules": "1-click modules",
   "hosting_dashboard_service_state": "Service status ",
   "hosting_dashboard_service_state_ACTIVE": "Active",
@@ -150,13 +150,13 @@
   "hosting_dashboard_service_cdn_customer_has_cdn_v1_banner_msg_link_upgrade": "Migrate your CDN",
   "hosting_dashboard_service_cdn_customer_has_cdn_v1_new_offers": "OVHcloud recommends the new CDN solutions",
   "hosting_dashboard_service_web": "Websites",
-  "hosting_dashboard_service_privatesql": "Private database",
+  "hosting_dashboard_service_privatesql": "Web Cloud Databases",
   "hosting_dashboard_service_privatesql_more": "See list ",
   "hosting_dashboard_service_privatesql_order": "Order",
-  "hosting_dashboard_service_privatesql_order_title": "Order a private database ",
+  "hosting_dashboard_service_privatesql_order_title": "Order a Web Cloud Database",
   "hosting_dashboard_service_privatesql_active": "Enable",
-  "hosting_dashboard_service_privatesql_active_long": "Activate a Private SQL database",
-  "hosting_dashboard_service_privatesql_active_remaining": "{{ count }} number of active private SQL database(s)",
+  "hosting_dashboard_service_privatesql_active_long": "Enable a Web Cloud Database",
+  "hosting_dashboard_service_privatesql_active_remaining": "{{ count }} Web Cloud Database not activated",
   "hosting_dashboard_service_privatesql_active_doing": "Enabling...",
   "hosting_dashbaord_service_privatesql_detach": "Detach",
   "hosting_dashboard_service_web_info_1": "on 1 recommended",
@@ -1069,8 +1069,8 @@
   "hosting_order_upgrade_start_time_summary_tomorrow": "Update scheduled at {{time}} tomorrow.",
   "hosting_migrate_my_ovh_org_success": "Your ovh.org domain migration has been processed. You will receive an email when it is complete.",
   "hosting_migrate_my_ovh_org_error": "An error has occurred migrating your ovh.org domain. ",
-  "hosting_tab_DATABASES_configuration_order_title_button_public": "Order a Start SQL database",
-  "hosting_tab_DATABASES_configuration_order_title_button_private": "Order a Private SQL database",
+  "hosting_tab_DATABASES_configuration_order_title_button_public": "Order a database",
+  "hosting_tab_DATABASES_configuration_order_title_button_private": "Order a Web Cloud Database",
   "hosting_tab_DATABASES_configuration_order_title": "Order a database",
   "hosting_tab_DATABASES_configuration_order_title_private": "Order a Private SQL database",
   "hosting_ipv4_coming_soon": "Currently unavailable",
