--- a/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_en_GB.json
@@ -394,7 +394,7 @@
   "privateDatabase_metrics_time_range_WEEK": "Last week",
   "privateDatabase_metrics_time_range_MONTH": "Last month",
   "privateDatabase_order_sql_type_start_label": "Start SQL",
-  "privateDatabase_order_sql_type_dbaas_label": "CloudDB",
+  "privateDatabase_order_sql_type_dbaas_label": "Web Cloud Databases",
   "privateDatabase_tabs_whitelist_webhosting_network_access_title": "Access to OVHcloud web hosting",
   "private_database_tabs_whitelist_webhosting_network_access_description": "Authorise OVHcloud web hosting plans to access the database",
   "private_database_tabs_whitelist_webhosting_network_access_success": "The change of authorisation for OVHcloud web hosting plans to access the database has been saved.",
@@ -462,7 +462,7 @@
   "privateDatabase_modale_oom_tab_size_reached": "Size reached",
   "privateDatabase_modale_oom_tab_uptime": "Time since the last overflow",
   "privateDatabase_modale_oom_no_oom": "No RAM overflow.",
-  "privateDatabase_modale_oom_info_order": "We recommend increasing the RAM for your CloudDB to resolve this issue.",
+  "privateDatabase_modale_oom_info_order": "We recommend increasing the RAM for your Web Cloud Databases overcome these issues.",
   "privateDatabase_tabs_list_extensions_title": "Extensions",
   "privateDatabase_tabs_list_extensions_extension": "Extension",
   "privateDatabase_tabs_list_extensions_description": "Description",
@@ -491,7 +491,7 @@
   "privateDatabase_modale_cpu_throttle_tab_duration": "Throttle duration",
   "privateDatabase_modale_cpu_throttle_ongoing_cpu_throttle": "CPU throttle in progress",
   "privateDatabase_modale_cpu_throttle_no_cpu_throttle": "No CPU throttles.",
-  "privateDatabase_modale_cpu_throttle_info_order": "We recommend improving your queries and indexes, or distributing your databases across more CloudDB instances to resolve these issues.",
+  "privateDatabase_modale_cpu_throttle_info_order": "We recommend improving your queries and indexes, or distributing your databases across more Web Cloud Databases instances to resolve these issues.",
   "privateDatabase_configuration_documentation": "More information on these options",
   "privateDatabase_dashboard_datacenter_gra": "Gravelines",
   "privateDatabase_dashboard_datacenter_gra3": "Gravelines 3",
