--- a/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/private-database/dashboard/translations/Messages_pl_PL.json
@@ -396,7 +396,7 @@
   "privateDatabase_metrics_time_range_WEEK": "Poprzedni tydzień",
   "privateDatabase_metrics_time_range_MONTH": "Ostatni miesiąc",
   "privateDatabase_order_sql_type_start_label": "Start SQL",
-  "privateDatabase_order_sql_type_dbaas_label": "CloudDB",
+  "privateDatabase_order_sql_type_dbaas_label": "Web Cloud Databases",
   "privateDatabase_tabs_whitelist_webhosting_network_access_title": "Dostęp do hostingu OVHcloud",
   "private_database_tabs_whitelist_webhosting_network_access_description": "Zezwól hostingowi OVHcloud na dostęp do bazy danych",
   "private_database_tabs_whitelist_webhosting_network_access_success": "Zmiana uprawnień dostępu hostingu OVHcloud do bazy danych została przyjęta.",
@@ -464,7 +464,7 @@
   "privateDatabase_modale_oom_tab_size_reached": "Wielkość przekroczenia",
   "privateDatabase_modale_oom_tab_uptime": "Czas, jaki upłynął od ostatniego przekroczenia",
   "privateDatabase_modale_oom_no_oom": "Pojemność RAM nie została przekroczona.",
-  "privateDatabase_modale_oom_info_order": "Aby rozwiązać ten problem, zalecamy zwiększenie pamięci RAM w Twojej usłudze CloudDB.",
+  "privateDatabase_modale_oom_info_order": "W celu rozwiązania tych problemów zalecamy zwiększenie pamięci RAM w Twojej bazie danych Web Cloud Databases.",
   "privateDatabase_tabs_list_extensions_title": "Rozszerzenia",
   "privateDatabase_tabs_list_extensions_extension": "Rozszerzenie",
   "privateDatabase_tabs_list_extensions_description": "Opis",
@@ -493,7 +493,7 @@
   "privateDatabase_modale_cpu_throttle_tab_duration": "Czas nasycenia",
   "privateDatabase_modale_cpu_throttle_ongoing_cpu_throttle": "Nasycenie CPU trakcie",
   "privateDatabase_modale_cpu_throttle_no_cpu_throttle": "Brak nasycenia CPU.",
-  "privateDatabase_modale_cpu_throttle_info_order": "Jeśli chcesz zaradzić tym problemom, zalecamy, abyś zoptymalizował zapytania i indeksy lub rozdzielił bazy danych na więcej instancji CloudDB.",
+  "privateDatabase_modale_cpu_throttle_info_order": "W celu rozwiązania tych problemów zalecamy ulepszenie zapytań i indeksów lub rozłożenie baz danych na większą liczbę instancji Web Cloud Databases.",
   "privateDatabase_configuration_documentation": "Więcej informacji na temat tych opcji",
   "privateDatabase_dashboard_datacenter_gra": "Gravelines",
   "privateDatabase_dashboard_datacenter_gra3": "Gravelines 3",
