--- a/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_es_ES.json
@@ -1,6 +1,6 @@
 {
-  "private_database_order_clouddb_title": "Contratar una base de datos privada",
-  "private_database_order_clouddb_subtitle": "La oferta de bases de datos en la nube requiere un servicio con acceso a la red pública de Internet.",
+  "private_database_order_clouddb_title": "Contratar una base de datos Web Cloud Databases",
+  "private_database_order_clouddb_subtitle": "La solución Web Cloud Databases requiere un servicio con acceso a la red pública de internet.",
   "private_database_order_clouddb_customization": "Personalización",
   "private_database_order_clouddb_server_version": "Versión del servidor",
   "private_database_order_clouddb_server_version_placeholder": "Seleccione la versión del servidor",
@@ -24,6 +24,8 @@
   "private_database_order_clouddb_payment_get_checkout_error": "Se ha producido un error al recuperar la información de su carrito.",
   "private_database_order_clouddb_payment_get_payment_method_error": "Se ha producido un error al intentar cargar las formas de pago",
   "private_database_order_clouddb_payment_checkout_error": "Se ha producido un error durante el pago de su cesta.",
-  "private_database_order_clouddb_payment_checkout_success": "Su pedido de sus bases de datos en la nube ha sido procesado. Se ha cargado un importe de {{price}} a su cuenta {{accountId}}. <a class=\"d-block\" target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">Ver mi factura</a>",
-  "private_database_order_clouddb_bill_success": "La <a target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">orden de pedido</a> se ha generado. Sus bases de datos en la nube estarán activas después de que usted haya pagado por ellas."
+  "private_database_order_clouddb_payment_checkout_success": "El pedido de su base de datos Web Cloud Databases se ha procesado correctamente. Se ha cargado un importe de {{price}} a su cuenta {{accountId}}.",
+  "private_database_order_clouddb_bill_success": "Su {{link}} se ha generado correctamente. Su base de datos Web Cloud Databases se activará una vez realizado el pago.",
+  "private_database_order_clouddb_payment_checkout_success_link": "Ver mi factura",
+  "private_database_order_clouddb_bill_success_link": "orden de pedido"
 }
