--- a/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/private-database/order/clouddb/translations/Messages_pl_PL.json
@@ -1,6 +1,6 @@
 {
-  "private_database_order_clouddb_title": "Zamówienie bazy danych w chmurze (Cloud Databases)",
-  "private_database_order_clouddb_subtitle": "Oferta Cloud Databases wymaga usługi z dostępem do publicznej sieci internet.",
+  "private_database_order_clouddb_title": "Zamów bazę danych Web Cloud Databases",
+  "private_database_order_clouddb_subtitle": "Oferta Web Cloud Databases wymaga usługi z dostępem do publicznej sieci internetowej.",
   "private_database_order_clouddb_customization": "Personalizacja",
   "private_database_order_clouddb_server_version": "Wersja serwera",
   "private_database_order_clouddb_server_version_placeholder": "Wybierz wersję serwera",
@@ -24,6 +24,8 @@
   "private_database_order_clouddb_payment_get_checkout_error": "Wystąpił błąd podczas ponierania informacji o koszyku.",
   "private_database_order_clouddb_payment_get_payment_method_error": "Wystąpił błąd podczas odzyskiwania sposobów płatności",
   "private_database_order_clouddb_payment_checkout_error": "Wystąpił błąd podczas płacenia koszyka.",
-  "private_database_order_clouddb_payment_checkout_success": "Twoje polecenie dotyczące bazy danych w chmurze zostało uwzględnione. Konto {{accountId}} zostało pomyślnie obciążone kwotą {{price}}. <a class=\"d-block\" target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">Wyświetl moją fakturę</a>",
-  "private_database_order_clouddb_bill_success": "<a target=\"_blank\" href=\"{{billUrl}}\" rel=\"noopener\">Zamówienie</a> zostało wygenerowane. Baza danych w chmurze będzie aktywna po zapłaceniu."
+  "private_database_order_clouddb_payment_checkout_success": "Zamówienie dotyczące bazy danych Web Cloud Databases zostało przyjęte. Twoje konto {{accountId}} zostało obciążone kwotą {{price}}.",
+  "private_database_order_clouddb_bill_success": "Twoja {{link}} została wygenerowana. Twoja baza danych Cloud Databases będzie aktywna po dokonaniu płatności.",
+  "private_database_order_clouddb_payment_checkout_success_link": "Sprawdź fakturę",
+  "private_database_order_clouddb_bill_success_link": "zamówienie"
 }
