--- a/packages/manager/apps/web/client/app/private-database/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/private-database/translations/Messages_en_GB.json
@@ -1,4 +1,4 @@
 {
-  "private_databases_title": "Databases",
+  "private_databases_title": "Web Cloud Databases",
   "private_databases_order": "Order"
 }
