--- a/packages/manager/apps/web/client/app/private-database/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/private-database/translations/Messages_it_IT.json
@@ -1,4 +1,4 @@
 {
-  "private_databases_title": "Database",
+  "private_databases_title": "Web Cloud Databases",
   "private_databases_order": "Ordina"
 }
