--- a/packages/manager/apps/web/client/app/private-database/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/private-database/translations/Messages_pl_PL.json
@@ -1,3 +1,4 @@
 {
-  "private_databases_order": "Zamów"
+  "private_databases_order": "Zamów",
+  "private_databases_title": "Web Cloud Databases"
 }
