--- a/packages/manager/apps/web/client/app/private-database/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/private-database/translations/Messages_pt_PT.json
@@ -1,4 +1,4 @@
 {
-  "private_databases_title": "Bases de dados",
+  "private_databases_title": "Web Cloud Databases",
   "private_databases_order": "Encomendar"
 }
