--- a/packages/manager/modules/vps/src/vps/translations/Messages_de_DE.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_de_DE.json
@@ -394,10 +394,10 @@
   "vps_additional_disk_add_button_soon": "In Kürze werden Sie auch die Möglichkeit haben, mehrere zusätzliche Festplatten zu Ihrem VPS hinzuzufügen.",
   "vps_tab_additional_disk_guide": "Verwendung einer zusätzlichen Festplatte",
   "vps_additional_disk_info_fail": "Fehler beim Laden der Informationen der zusätzlichen Festplatten",
-  "vps_tab_cloud_database": "Datenbank",
+  "vps_tab_cloud_database": "Datenbanken",
   "vps_tab_cloud_database_description": "Sie benötigen zuverlässige, leistungsstarke und zu 100% von OVHcloud gemanagte Datenbanken?<br/>Dann nutzen Sie unseren Dienst Cloud Databases!<br/>Sie haben damit eine autonome Datenbank zu Ihrer Verfügung, die mit allen Ihren Cloud Produkten von OVHcloud kompatibel ist.<br/>MariaDB, MongoDB, MySQL, PostgreSQL und Redis sind verfügbar!",
   "vps_tab_cloud_database_explanation": "Hier finden Sie alle Ihre Datenbanken.<br/>Sie können für jede Datenbank die IP Ihres VPS zulassen oder entfernen.<br/>Außer dem können Sie neue Datenbanken bestellen.",
-  "vps_tab_cloud_database_header_name": "CloudDB-Instanz",
+  "vps_tab_cloud_database_header_name": "Web Cloud Databases-Instanz",
   "vps_tab_cloud_database_header_version": "Version",
   "vps_tab_cloud_database_header_vps_authorized": "Autorisierter VPS",
   "vps_tab_cloud_database_header_status": "Status",
@@ -412,8 +412,8 @@
   "vps_tab_cloud_database_whitelist_remove_success": "Dem VPS wurden die Zugriffsrechte auf die Datenbank entzogen. Er kann nun nicht mehr auf die Datenbank zugreifen.",
   "vps_tab_cloud_database_whitelist_remove_error": "Bei der Anfrage zur Löschung der Zugriffsberechtigung auf die Datenbank ist ein Fehler aufgetreten.",
   "vps_tab_cloud_database_order": "Datenbank bestellen",
-  "vps_tab_cloud_database_order_disclaimer": "Für CloudDB ist ein Dienst mit Zugriff auf das öffentliche Netzwerk/Internet notwendig.",
-  "vps_tab_cloud_database_order_explanation_title": "Eigenschaften von CloudDB:",
+  "vps_tab_cloud_database_order_disclaimer": "Die Verwendung von Web Cloud Databases erfordert einen Dienst mit Zugriff auf das öffentliche Netzwerk/Internet.",
+  "vps_tab_cloud_database_order_explanation_title": "Eigenschaften von Web Cloud Databases:",
   "vps_tab_cloud_database_order_explanation_text": "Zugang über das öffentliche Netzwerk<br />Anzahl Datenbanken unbegrenzt<br />512 MB bis 4 GB RAM garantiert<br />Garantierter Festplattenspeicher mit 8 GB bis 54 GB<br />Tägliche automatische Backups <br />Bis zu 200 Simultanverbindungen",
   "vps_tab_cloud_database_order_customize": "Anpassung",
   "vps_tab_cloud_database_order_version": "Version des Servers",
