--- a/packages/manager/modules/vps/src/vps/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_fr_CA.json
@@ -398,10 +398,10 @@
   "vps_additional_disk_add_button_soon": "Prochainement vous pourrez ajouter de multiples disques additionnels à votre VPS.",
   "vps_tab_additional_disk_guide": "Comment utiliser un disque additionnel",
   "vps_additional_disk_info_fail": "Erreur lors du chargement d'informations sur les disques additionnels",
-  "vps_tab_cloud_database": "Base de données",
+  "vps_tab_cloud_database": "Bases de données",
   "vps_tab_cloud_database_description": "Besoin de bases de données fiables, performantes et 100% managées par OVH ?<br/>Commandez notre service Cloud Databases !<br/>Vous disposerez d'une base de données autonome et compatible avec tous vos produits Cloud OVH.<br/>MariaDB, MongoDB, MySQL, PostgreSQL et Redis disponibles !",
   "vps_tab_cloud_database_explanation": "Retrouvez ci-dessous toutes vos bases de données.<br/>Vous pouvez pour chaque base de données, autoriser l'IP de votre VPS ou a contrario le supprimer.<br/>Ainsi que commander de nouvelles bases de données.",
-  "vps_tab_cloud_database_header_name": "Instance CloudDB",
+  "vps_tab_cloud_database_header_name": "Instance Web Cloud Databases",
   "vps_tab_cloud_database_header_version": "Version",
   "vps_tab_cloud_database_header_vps_authorized": "VPS autorisé",
   "vps_tab_cloud_database_header_status": "Statut",
@@ -416,8 +416,8 @@
   "vps_tab_cloud_database_whitelist_remove_success": "Le VPS a été retiré des accès à la base avec succès. Il ne peut désormais plus accéder à la base.",
   "vps_tab_cloud_database_whitelist_remove_error": "Une erreur est survenue lors de la demande de suppression d'accès à la base.",
   "vps_tab_cloud_database_order": "Commander une base de données",
-  "vps_tab_cloud_database_order_disclaimer": "L’offre CloudDB nécessite un service ayant accès au réseau internet public.",
-  "vps_tab_cloud_database_order_explanation_title": "Caractéristiques de CloudDB :",
+  "vps_tab_cloud_database_order_disclaimer": "L’offre Web Cloud Databases nécessite un service ayant accès au réseau internet public.",
+  "vps_tab_cloud_database_order_explanation_title": "Caractéristiques de Web Cloud Databases :",
   "vps_tab_cloud_database_order_explanation_text": "Accessible depuis le réseau public uniquement<br />Nombre de bases illimité<br />Mémoire RAM garantie de 512 Mo à 4Go<br />Disque garanti de 8 Go à 54 Go<br />Sauvegardes automatiques journalières<br />Jusqu'à 200 connexions simultanées",
   "vps_tab_cloud_database_order_customize": "Personnalisation",
   "vps_tab_cloud_database_order_version": "Version du serveur",
