--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_de_DE.json
@@ -1353,5 +1353,7 @@
   "hosting_dashboard_service_common_inactive": "Inaktiv",
   "hosting_dashboard_email_offer_get_error": "Es ist unmöglich, die E-Mail-Adresse wiederherzustellen.",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "Mehr"
+  "hosting_dashboard_tabs_dropdown": "Mehr",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP und SSH:"
 }
