--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
@@ -1353,5 +1353,7 @@
   "hosting_dashboard_service_common_inactive": "Disabled",
   "hosting_dashboard_email_offer_get_error": "Unable to retrieve email address",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "More"
+  "hosting_dashboard_tabs_dropdown": "More",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP and SSH:"
 }
