--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
@@ -728,6 +728,8 @@
   "hosting_tab_FTP_FTP_port": "Port FTP :",
   "hosting_tab_FTP_SFTP_port": "Port SFTP :",
   "hosting_tab_FTP_SSH_port": "Port SSH :",
+  "hosting_tab_FTP_FTP_user": "FTP :",
+  "hosting_tab_FTP_SSH_user": "SFTP et SSH :",
   "hosting_tab_FTP_dashboard_login": "Login principal :",
   "hosting_tab_FTP_dashboard_login_enabled": "Login principal activé :",
   "hosting_tab_FTP_dashboard_homez": "Chemin du répertoire home :",
