--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_it_IT.json
@@ -1353,5 +1353,7 @@
   "hosting_dashboard_service_common_inactive": "Disattivo",
   "hosting_dashboard_email_offer_get_error": "Impossibile recuperare l’indirizzo email",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "Più"
+  "hosting_dashboard_tabs_dropdown": "Più",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP e SSH:"
 }
