--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pl_PL.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pl_PL.json
@@ -1353,5 +1353,7 @@
   "hosting_dashboard_service_common_inactive": "Nieaktywny",
   "hosting_dashboard_email_offer_get_error": "Nie można pobrać adresu e-mail",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "Więcej"
+  "hosting_dashboard_tabs_dropdown": "Więcej",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP i SSH:"
 }
