--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_pt_PT.json
@@ -1353,5 +1353,7 @@
   "hosting_dashboard_service_common_inactive": "Inativo",
   "hosting_dashboard_email_offer_get_error": "Não é possível recuperar o endereço de e-mail",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "Mais"
+  "hosting_dashboard_tabs_dropdown": "Mais",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP e SSH:"
 }
